<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:name="com.yalantis.ucrop.UCropActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        tools:context=".view.UploadActivity">

    <TextView
        android:id="@+id/tvUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_extrabold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/upload" />


    <ImageView
        android:id="@+id/imgUpload"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="Result image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpload"
        app:srcCompat="@drawable/baseline_image_search_24" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_extrabold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUpload"
        android:text="@string/result" />

    <TextView
        android:id="@+id/tvResultAnalyze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_extrabold"
        app:layout_constraintStart_toEndOf="@+id/tvResult"
        app:layout_constraintTop_toBottomOf="@+id/imgUpload"
        tools:text="@string/result" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingGalleryButton"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/purple"
        android:clickable="true"
        android:contentDescription="Upload image here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/gallery"
        app:tint="@color/pink" />

    <Button
        android:id="@+id/buttonAnalyze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="44dp"
        android:height="62dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/analyze"
        android:textColor="@color/pink"
        android:textSize="20sp"
        android:textAlignment="center"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/floatingGalleryButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>